--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/itsmeplee/Moodify/issues"
   },
-  "homepage": "https://github.com/itsmeplee/Moodify#readme"
+  "homepage": "https://github.com/itsmeplee/Moodify#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
+  }
 }
