--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/index.js",
+    "react": "webpack -p --watch"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
